Change in admin page, modify ffmpeg methods